# trait-poly

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md  reflectbolt.cpp  shared_trait.hpp  testing.hpp  trait_impl.hpp  trp_concepts.hpp
